[package]
name = "job_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["timeout"] }
clap = { version = "4.5", features = ["derive"] }
